--- a/PortalAdmin/Views/Shared/_Layout.cshtml
+++ b/PortalAdmin/Views/Shared/_Layout.cshtml
@@ -841,9 +841,9 @@
 
     <script src="~/Content/AdminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- ChartJS -->
-    @*<script src="~/Content/AdminLTE/plugins/chart.js/Chart.min.js"></script>*@
+    <script src="~/Content/AdminLTE/plugins/chart.js/Chart.min.js"></script>
     <!-- Sparkline -->
-    <!--<script src="~/Content/AdminLTE/plugins/sparklines/sparkline.js"></script>-->
+    <script src="~/Content/AdminLTE/plugins/sparklines/sparkline.js"></script>
 
 
     <!-- jQuery Knob Chart -->
@@ -860,7 +860,7 @@
     <!-- AdminLTE App -->
     <script src="~/Content/AdminLTE/dist/js/adminlte.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="~/Content/AdminLTE/dist/js/pages/dashboard.js"></script>
+    @*<script src="~/Content/AdminLTE/dist/js/pages/dashboard.js"></script>*@
     <!-- AdminLTE for demo purposes -->
     <script src="~/Content/AdminLTE/dist/js/demo.js"></script>
 
